# algo_trading

./: .gitignore  ALPACA_MIGRATION_PLAN.md  ARCHITECTURAL_IMPROVEMENTS_PLAN.md  ARCHITECTURE_IMPROVEMENTS_COMPLETE.md  ARCHITECTURE_PLAN_FINAL.md  BAD_VS_GOOD_IMPLEMENTATION.md  BIOTECH_TRADING_SIGNAL_SPEC.md  CLAUDE.md  CLEANUP_AND_TYPE_HINTS_COMPLETE.md  CODEBASE_GRADE_AND_REVIEW.md  CODEBASE_GRADE_UPDATED.md  CODEBASE_REVIEW.md  COMPLETED_IMPROVEMENTS_SUMMARY.md  CRITICAL_PATH_ANALYSIS.md  DI_EXPLANATION.md  DI_IMPLEMENTATION_COMPLETE.md  DI_IMPLEMENTATION_DETAILED.md  DI_REVIEW.md  DOMAIN_ISOLATION_ASSESSMENT.md  EVENT_BUS_FIRE_AND_FORGET_ANALYSIS.md  EVENT_FLOW_AND_WRAPPERS_EXPLAINED.md  EXIT_TRADE_STRATEGY_ANALYSIS.md  FINAL_GRADE.md  IMPROVEMENTS_EXPLAINED.md  INTEGRATION_TEST_FIDELITY_ANALYSIS.md  IS_RUNNING_REMOVAL_EXPLAINED.md  JANUARY_ANALYSIS.md  LATENCY_ANALYSIS.md  LATENCY_BOTTLENECK_ANALYSIS.md  LATENCY_FIDELITY_ANALYSIS.md  LATENCY_OPTIMIZATION_PROGRESS.md  LOAD_SCALING_ANALYSIS.md  NBBO_PARALLELIZATION_FIX.md  OSRH_LATENCY_BREAKDOWN.md  PATTERN_ANALYSIS_SIDU.md  QUANT_MODELS_STRATEGY_GUIDE.md  README.md  SCALING_ROADMAP.md  SIGNAL_OPTIMIZATION_PLAN.md  STATELESSNESS_EXPLAINED.md  (+34 more)
data/: blacklist.json  catalyst_patterns.json
docs/: COMPLEX_FEATURES_PLAN.md  EVENT_LOOP_BLOCKING_ISSUE.md  IBKR_GATEWAY_SETUP.md  IBKR_TRADING_SETUP.md  MOMENTUM_TRAILING_STOP.md  TRADING_MECHANICS.md  cloud_deployment_plan.md  exit_strategy_chart_signals.md
prompts/: catalyst_identification.txt  classification_prompt.txt  translation_prompt.txt
scripts/: add_share_repurchase_to_prompts.py  aggregate_trade_stats.py  analyze_basic_materials_patterns.py  analyze_biotech_winners.py  analyze_consumer_cyclical_patterns.py  analyze_consumer_defensive_patterns.py  analyze_exit_patterns.py  analyze_exit_timing.py  analyze_feature_thresholds.py  analyze_financial_services_patterns.py  analyze_headline_patterns.py  analyze_healthcare_patterns.py  analyze_high_excursion_headlines.py  analyze_industrials_patterns.py  analyze_january_patterns.py  analyze_kidz_breaches.py  analyze_missed_trades.py  analyze_patterns.py  analyze_price_timing_10s.py  analyze_real_estate_patterns.py  analyze_spread_filter_all_winners.py  analyze_stopout.py  analyze_surge_timing.py  analyze_technology_patterns.py  analyze_todays_winners_vs_losses.py  analyze_vvpr_surge.py  analyze_wyfi_volume.py  backfill_exit_data.py  backfill_late_trade_candidates.py  backfill_retrospective_classification.py  backtest_decision_path.py  backtest_exit_policy.py  backtest_imminent_feb9.py  biotech_backtester.py  check_price_at_10s.py  check_price_movement_10s.py  check_ritr_volume.py  close_all_positions.py  collect_alpaca_movers.py  collect_catalyst_headlines.py  (+45 more)
services/: translation_service.py
specs/: architecture_refactoring_plan.md  chapter1_aggressive_cleanup.md  chapter1_audit.md  chapter1_comprehensive_removals.md  chapter1_final_summary.md  chapter3_2_brokerage_breakdown_plan.md  chapter3_2_cleanup_complete.md  chapter3_2_cleanup_plan.md  chapter3_2_complete_summary.md  chapter3_2_completion_summary.md  chapter3_2_detailed_breakdown.md  chapter3_2_infrastructure_complete.md  deployment_plan.md  (+34 more)
(+431 files in other folders)
