[project]
name = "newsflash"
version = "0.1.0"
description = "High-frequency news trading system using Polygon.io"
requires-python = ">=3.9"
dependencies = [
    "polygon-api-client>=1.12.0", # Official Polygon.io Python client
    "httpx>=0.25.0", # Async HTTP client
    "python-dotenv>=1.0.0", # Environment variable loading
    "fastapi>=0.104.0", # Web framework for health endpoints
    "uvicorn[standard]>=0.24.0", # ASGI server
    "pydantic>=2.5.0", # Data validation
    "structlog>=23.2.0", # Structured logging
    "tenacity>=8.2.0", # Retry logic with exponential backoff
    "aiofiles>=23.0.0", # Async file operations
    "python-telegram-bot>=20.7", # Telegram bot API
    "groq>=0.9.0", # Groq API for LLM classification
    "yfinance>=0.2.0", # Yahoo Finance API for fundamental data
    "ib-insync>=0.9.86", # Interactive Brokers API
    "pytz>=2023.3", # Timezone handling for extended hours detection
    "websockets>=12.0", # WebSocket client for Benzinga direct feed
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsflash"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
