[project]
name = "newsflash"
version = "0.1.0"
description = "High-frequency news trading system using Polygon.io"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0", # Environment variable loading
    "fastapi>=0.104.0", # Web framework for health endpoints
    "uvicorn[standard]>=0.24.0", # ASGI server
    "pydantic>=2.5.0", # Data validation
    "structlog>=23.2.0", # Structured logging
    "aiofiles>=23.0.0", # Async file operations
    "python-telegram-bot>=20.7", # Telegram bot API
    "groq>=0.9.0", # Groq API for LLM classification
    "pytz>=2023.3", # Timezone handling for extended hours detection
    "websockets>=12.0", # Native async WebSocket client for Benzinga (replaces websocket-client)
    "dependency-injector>=4.41.0", # Dependency injection framework
    "alpaca-py>=0.1.0", # Alpaca Trading API Python SDK
    "yfinance", # Yahoo Finance API for sector, industry, market cap, shares outstanding
    "tqdm", # Progress bar for loops
    "spacy>=3.7.0", # NLP library for NER/text classification
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsflash"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
